--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,10 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="/index.html">CRUD Usuários</a>
+        <a class="navbar-brand" href="/index.html">CRUD Produtos</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="/src/components/usuarios/usuario-list/usuarioList.html">Lista de Usuários</a></li>
-                <li class="nav-item"><a class="nav-link" href="/src/components/usuarios/usuario-form/usuarioForm.html">Novo Usuário</a></li>
+                <li class="nav-item"><a class="nav-link" href="/src/components/produtos/produto-list/produtoList.html">Lista de Produtos</a></li>
             </ul>
         </div>
     </div>
